// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EmailVerification component rendering should render edit loading state correctly 1`] = `
<styled.div
  className="cn"
>
  <Styled(styled.div)>
    <TextBox
      height="48px"
      input={
        Object {
          "value": "f@ke.mail",
        }
      }
      placeholder="satoshi@blockchain.com"
    />
    <LoadingButton
      loading={true}
      nature="primary"
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Send Now"
        id="components.EmailVerification.sendnow"
        values={Object {}}
      />
    </LoadingButton>
  </Styled(styled.div)>
</styled.div>
`;

exports[`EmailVerification component rendering should render edit loading with label correctly 1`] = `
<styled.div
  className="cn"
>
  <label
    htmlFor="email"
  >
    <FormattedMessage
      defaultMessage="Enter Your Email Address"
      id="components.EmailVerification.label"
      values={Object {}}
    />
  </label>
  <Styled(styled.div)>
    <TextBox
      height="48px"
      input={
        Object {
          "value": "f@ke.mail",
        }
      }
      placeholder="satoshi@blockchain.com"
    />
    <LoadingButton
      loading={true}
      nature="primary"
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Send Now"
        id="components.EmailVerification.sendnow"
        values={Object {}}
      />
    </LoadingButton>
  </Styled(styled.div)>
</styled.div>
`;

exports[`EmailVerification component rendering should render edit state correctly 1`] = `
<styled.div
  className="cn"
>
  <Styled(styled.div)>
    <TextBox
      height="48px"
      input={
        Object {
          "value": "f@ke.mail",
        }
      }
      placeholder="satoshi@blockchain.com"
    />
    <LoadingButton
      nature="primary"
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Send Now"
        id="components.EmailVerification.sendnow"
        values={Object {}}
      />
    </LoadingButton>
  </Styled(styled.div)>
</styled.div>
`;

exports[`EmailVerification component rendering should render edit with label correctly 1`] = `
<styled.div
  className="cn"
>
  <label
    htmlFor="email"
  >
    <FormattedMessage
      defaultMessage="Enter Your Email Address"
      id="components.EmailVerification.label"
      values={Object {}}
    />
  </label>
  <Styled(styled.div)>
    <TextBox
      height="48px"
      input={
        Object {
          "value": "f@ke.mail",
        }
      }
      placeholder="satoshi@blockchain.com"
    />
    <LoadingButton
      nature="primary"
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Send Now"
        id="components.EmailVerification.sendnow"
        values={Object {}}
      />
    </LoadingButton>
  </Styled(styled.div)>
</styled.div>
`;

exports[`EmailVerification component rendering should render verificationSent loading state correctly 1`] = `
<styled.div
  className="cn"
>
  <Text
    altFont={false}
    capitalize={false}
    color="grey700"
    cursor="inherit"
    italic={false}
    lineHeight="inherit"
    opacity={1}
    size="16px"
    uppercase={false}
    weight="300"
  >
    <FormattedMessage
      defaultMessage="Check your inbox. We sent an email to:"
      id="components.EmailVerification.checkinbox"
      values={Object {}}
    />
  </Text>
  <Styled(Text)
    weight="400"
  >
    f@ke.mail
  </Styled(Text)>
  <Styled(styled.div)>
    <Styled(LoadingButton)
      loading={true}
      nature="primary"
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Change Email"
        id="components.EmailVerification.changeemail"
        values={Object {}}
      />
    </Styled(LoadingButton)>
    <LoadingButton
      loading={true}
      nature="primary"
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Send Again"
        id="components.EmailVerification.sendemailagain"
        values={Object {}}
      />
    </LoadingButton>
  </Styled(styled.div)>
</styled.div>
`;

exports[`EmailVerification component rendering should render verificationSent state correctly 1`] = `
<styled.div
  className="cn"
>
  <Text
    altFont={false}
    capitalize={false}
    color="grey700"
    cursor="inherit"
    italic={false}
    lineHeight="inherit"
    opacity={1}
    size="16px"
    uppercase={false}
    weight="300"
  >
    <FormattedMessage
      defaultMessage="Check your inbox. We sent an email to:"
      id="components.EmailVerification.checkinbox"
      values={Object {}}
    />
  </Text>
  <Styled(Text)
    weight="400"
  >
    f@ke.mail
  </Styled(Text)>
  <Styled(styled.div)>
    <Styled(LoadingButton)
      nature="primary"
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Change Email"
        id="components.EmailVerification.changeemail"
        values={Object {}}
      />
    </Styled(LoadingButton)>
    <LoadingButton
      nature="primary"
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Send Again"
        id="components.EmailVerification.sendemailagain"
        values={Object {}}
      />
    </LoadingButton>
  </Styled(styled.div)>
</styled.div>
`;

exports[`EmailVerification component rendering should render verified state correctly 1`] = `
<styled.div
  className="cn"
>
  <Styled(Text)
    color="success"
  >
    <FormattedMessage
      defaultMessage="Email Verified"
      id="components.EmailVerification.emailverified"
      values={Object {}}
    />
    <Icon
      color="success"
      cursor={false}
      name="check"
      size="13px"
      weight="400"
    />
  </Styled(Text)>
  <Styled(Text)
    weight="400"
  >
    f@ke.mail
  </Styled(Text)>
</styled.div>
`;
